Switch folders to buckets
